force-app/main/default/objects/CCX_User_Account__c/CCX_User_Account__c.object-meta.xml
<CustomObject>
    <label>CCX User Account</label>
    <nameField>
        <displayFormat>UAN-{0000}</displayFormat>
        <label>CCX User Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX User Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>