force-app/main/default/objects/CCX_User_Account__c/fields/CCX_Email__c.field-meta.xml
<CustomField>
    <fullName>CCX_Email__c</fullName>
    <label>CCX Email</label>
    <type>Email</type>
</CustomField>