force-app/main/default/objects/CCX_User_Account__c/fields/CCX_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_First_Name__c</fullName>
    <label>CCX First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>