force-app/main/default/objects/CCX_User_Account__c/fields/CCX_Is_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>CCX_Is_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCX Is Project Manager</label>
    <type>Checkbox</type>
</CustomField>