force-app/main/default/objects/CCX_User_Account__c/fields/CCX_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_Last_Name__c</fullName>
    <label>CCX Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>