force-app/main/default/objects/CCX_User_Account__c/fields/CCX_Password__c.field-meta.xml
<CustomField>
    <fullName>CCX_Password__c</fullName>
    <label>CCX Password</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>