force-app/main/default/objects/CCX_User_Account__c/fields/CCX_Registration_Time__c.field-meta.xml
<CustomField>
    <fullName>CCX_Registration_Time__c</fullName>
    <label>CCX Registration Time</label>
    <type>DateTime</type>
</CustomField>