force-app/main/default/objects/CCX_User_Account__c/fields/CCX_User_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_User_Name__c</fullName>
    <label>CCX User Name</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>