force-app/main/default/objects/CCX_User_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCX_First_Name__c</columns>
    <columns>CCX_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>